--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Currency Convertor</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1 class="heading">Currency Convertor</h1>
+        <div class="currency-container">
+            <select id="first-currency">
+                <option value="AUD">AUD</option>
+                <option value="CAD">CAD</option>
+                <option value="EUR">EUR</option>
+                <option value="GBP">GBP</option>
+                <option value="INR">INR</option>
+                <option value="JPY">JPY</option>
+                <option value="USD">USD</option>
+            </select>
+            <input type="number" id="worth-first" value="1" min="0">
+        </div>
+    </div>
 </body>
 </html>
