--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currency Convertor</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -17,10 +18,24 @@
                 <option value="GBP">GBP</option>
                 <option value="INR">INR</option>
                 <option value="JPY">JPY</option>
+                <option value="USD" selected>USD</option>
+            </select>
+            <input type="number" id="first-worth" value="1" min="0">
+        </div>
+        <div class="currency-container">
+            <select id="second-currency">
+                <option value="AUD">AUD</option>
+                <option value="CAD">CAD</option>
+                <option value="EUR">EUR</option>
+                <option value="GBP">GBP</option>
+                <option value="INR" selected>INR</option>
+                <option value="JPY">JPY</option>
                 <option value="USD">USD</option>
             </select>
-            <input type="number" id="worth-first" value="1" min="0">
+            <input type="number" id="second-worth" disabled>
         </div>
+        <p class="exchange-rate" id="exchange-rate">1 USD = 138.5802 JPY</p>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
