--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="heading">Currency Convertor</h1>
+        <h1 class="heading">Currency Converter</h1>
         <div class="currency-container">
             <select id="first-currency">
                 <option value="AUD">AUD</option>
